Rewrote user management and removed users in metadata