@@ -21,15 +21,13 @@ package io.jitstatic.api;
  */
 
 import static io.jitstatic.JitStaticConstants.JITSTATIC_KEYADMIN_REALM;
-import static io.jitstatic.source.ObjectStreamProvider.toProvider;
 import static io.jitstatic.source.ObjectStreamProvider.toByte;
+import static io.jitstatic.source.ObjectStreamProvider.toProvider;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
@@ -39,10 +37,8 @@ import static org.mockito.Mockito.when;
 import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.Base64;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -60,11 +56,11 @@ import javax.ws.rs.core.Response.Status;
 
 import org.eclipse.jetty.http.HttpStatus;
 import org.eclipse.jgit.api.errors.RefNotFoundException;
-import org.glassfish.jersey.server.filter.RolesAllowedDynamicFeature;
 import org.glassfish.jersey.test.grizzly.GrizzlyWebTestContainerFactory;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mockito;
@@ -75,15 +71,13 @@ import com.spencerwi.either.Either;
 
 import io.dropwizard.auth.AuthDynamicFeature;
 import io.dropwizard.auth.AuthValueFactoryProvider;
-import io.dropwizard.auth.basic.BasicCredentialAuthFilter;
 import io.dropwizard.testing.junit5.DropwizardExtensionsSupport;
 import io.dropwizard.testing.junit5.ResourceExtension;
+import io.jitstatic.JitStaticConstants;
 import io.jitstatic.MetaData;
 import io.jitstatic.Role;
-import io.jitstatic.auth.ConfiguratedAuthenticator;
-import io.jitstatic.auth.KeyAdminAuthenticatorImpl;
+import io.jitstatic.auth.UrlAwareBasicCredentialAuthFilter;
 import io.jitstatic.auth.User;
-import io.jitstatic.auth.UserData;
 import io.jitstatic.hosted.FailedToLock;
 import io.jitstatic.hosted.StoreInfo;
 import io.jitstatic.storage.HashService;
@@ -96,7 +90,6 @@ import io.jitstatic.utils.WrappingAPIException;
 @ExtendWith(DropwizardExtensionsSupport.class)
 public class KeyResourceTest {
     private static final String REFS_HEADS_MASTER = "refs/heads/master";
-    private static final String APPLICATION_JSON = "application/json";
     private static final Charset UTF_8 = StandardCharsets.UTF_8;
     private static final String USER = "user";
     private static final String SECRET = "secret";
@@ -111,35 +104,33 @@ public class KeyResourceTest {
     private static String returnedHorse;
     private HashService hashService = new HashService();
     private Storage storage = mock(Storage.class);
+    private io.jitstatic.auth.UserData userData = mock(io.jitstatic.auth.UserData.class);
 
     public ResourceExtension RESOURCES = ResourceExtension.builder().setTestContainerFactory(new GrizzlyWebTestContainerFactory())
-            .addProvider(new AuthDynamicFeature(new BasicCredentialAuthFilter.Builder<User>().setAuthenticator(new ConfiguratedAuthenticator())
-                    .setRealm(JITSTATIC_KEYADMIN_REALM).setAuthorizer((User u,
-                            String r) -> true)
-                    .buildAuthFilter()))
-            .addProvider(RolesAllowedDynamicFeature.class).addProvider(new AuthValueFactoryProvider.Binder<>(User.class))
-            .addResource(new KeyResource(storage, new KeyAdminAuthenticatorImpl(storage, (user,
-                    ref) -> new User(PUSER, PSECRET)
-                            .equals(user), REFS_HEADS_MASTER, hashService), false, REFS_HEADS_MASTER, new HashService()))
+            .addProvider(new AuthDynamicFeature(new UrlAwareBasicCredentialAuthFilter<>(storage, hashService, (u, p) -> u.equals(PUSER) && p.equals(PSECRET))))
+            .addProvider(new AuthValueFactoryProvider.Binder<>(User.class))
+            .addResource(new KeyResource(storage, false, REFS_HEADS_MASTER))
             .build();
 
     @BeforeAll
     public static void setupClass() throws JsonProcessingException, IOException {
         byte[] dog = "{\"food\":[\"bone\",\"meat\"]}".getBytes(UTF_8);
-        Set<User> users = new HashSet<>(Arrays.asList(new User(USER, SECRET)));
         byte[] b = new byte[] { 1, 2, 3, 4, 5, 6, 7, 8 };
-        StoreInfo bookData = new StoreInfo(toProvider(b), new MetaData(users, "application/octet-stream", false, false, List.of(), null, null), "1", "1");
+        StoreInfo bookData = new StoreInfo(toProvider(b), new MetaData("application/octet-stream", false, false, List.of(), Set.of(new Role("read")), Set
+                .of(new Role("write"))), "1", "1");
         DATA.put("book", Optional.of(bookData));
-        StoreInfo dogData = new StoreInfo(toProvider(dog), new MetaData(users, null, false, false, List.of(), null, null), "1", "1");
+        StoreInfo dogData = new StoreInfo(toProvider(dog), new MetaData(null, false, false, List.of(), Set.of(new Role("read")), Set
+                .of(new Role("write"))), "1", "1");
         returnedDog = new String(toByte(dogData.getStreamProvider()));
         DATA.put("dog", Optional.of(dogData));
         byte[] horse = "{\"food\":[\"wheat\",\"grass\"]}".getBytes(UTF_8);
-        StoreInfo horseData = new StoreInfo(toProvider(horse), new MetaData(new HashSet<>(), null, false, false, List.of(), null, null), "1", "1");
+        StoreInfo horseData = new StoreInfo(toProvider(horse), new MetaData(null, false, false, List.of(), Set.of(new Role("read2")), Set
+                .of(new Role("write2"))), "1", "1");
         returnedHorse = new String(toByte(horseData.getStreamProvider()));
         DATA.put("horse", Optional.of(horseData));
         byte[] cat = "{\"food\":[\"fish\",\"bird\"]}".getBytes(UTF_8);
-        users = new HashSet<>(Arrays.asList(new User("auser", "apass")));
-        StoreInfo catData = new StoreInfo(toProvider(cat), new MetaData(users, null, false, false, List.of(), null, null), "1", "1");
+        StoreInfo catData = new StoreInfo(toProvider(cat), new MetaData(null, false, false, List.of(), Set.of(new Role("read2")), Set
+                .of(new Role("write2"))), "1", "1");
         DATA.put("cat", Optional.of(catData));
     }
 
@@ -148,114 +139,149 @@ public class KeyResourceTest {
         Mockito.reset(storage);
     }
 
+    @BeforeEach
+    public void beforeEach() throws RefNotFoundException {
+        when(storage.getUser(eq(USER), any(), eq(JitStaticConstants.JITSTATIC_KEYUSER_REALM))).thenReturn(userData);
+        when(userData.getRoles()).thenReturn(Set.of(new Role("read"), new Role("write")));
+        when(userData.getBasicPassword()).thenReturn(SECRET);
+    }
+
     @Test
-    public void testGettingKeyFromResource() throws InterruptedException {
+    public void testGettingKeyFromResource() throws InterruptedException, RefNotFoundException {
         Optional<StoreInfo> expected = DATA.get("dog");
         when(storage.getKey("dog", REFS_HEADS_MASTER)).thenReturn(CompletableFuture.completedFuture(expected));
-        JsonNode response = RESOURCES.target("/storage/dog").request()
-                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED).get(JsonNode.class);
+        JsonNode response = RESOURCES.target("/storage/dog")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
+                .get(JsonNode.class);
         assertEquals(returnedDog, response.toString());
     }
 
     @Test
-    public void testGettingKeyFromResourceWithNoAuthentication() {
+    public void testGettingKeyFromResourceWithNoAuthentication() throws RefNotFoundException {
         Optional<StoreInfo> expected = DATA.get("dog");
         when(storage.getKey("dog", REFS_HEADS_MASTER)).thenReturn(CompletableFuture.completedFuture(expected));
-        assertThat(assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/dog").request().get(JsonNode.class))
-                .getLocalizedMessage(), Matchers.containsString(Status.UNAUTHORIZED.toString()));
+        assertThat(assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/dog")
+                .request()
+                .get(JsonNode.class))
+                        .getLocalizedMessage(), Matchers.containsString(Status.FORBIDDEN.toString()));
     }
 
     @Test
-    public void testKeyNotFound() {
+    public void testKeyNotFound() throws RefNotFoundException {
         when(storage.getKey(eq("cat"), any())).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
-        assertEquals(compileMsg(Status.NOT_FOUND), assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/cat").request()
-                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED).get(MetaData.class))
+        assertEquals(compileMsg(Status.NOT_FOUND), assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/cat")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
+                .get(MetaData.class))
                         .getLocalizedMessage());
     }
 
     @Test
-    public void testNoAuthorizationOnPermittedResource() throws InterruptedException {
-        Optional<StoreInfo> expected = DATA.get("horse");
-        when(storage.getKey("horse", REFS_HEADS_MASTER)).thenReturn(CompletableFuture.completedFuture(expected));
-        JsonNode response = RESOURCES.target("/storage/horse").request().get(JsonNode.class);
-        assertEquals(returnedHorse, response.toString());
-    }
-
-    @Test
-    public void testKeyIsFoundButWrongUser() {
+    public void testKeyIsFoundButWrongUser() throws RefNotFoundException {
         Optional<StoreInfo> expected = DATA.get("dog");
         when(storage.getKey("dog", REFS_HEADS_MASTER)).thenReturn(CompletableFuture.completedFuture(expected));
-        final String bac = "Basic " + Base64.getEncoder().encodeToString(("anotheruser:" + SECRET).getBytes(UTF_8));
-        assertEquals("HTTP 403 Forbidden", assertThrows(WebApplicationException.class, () -> {
-            RESOURCES.target("/storage/dog").request()
-                    .header(HttpHeaders.AUTHORIZATION, bac).get(JsonNode.class);
+        final String bac = createCreds("anotheruser", SECRET);
+        assertEquals("HTTP 401 Unauthorized", assertThrows(WebApplicationException.class, () -> {
+            RESOURCES.target("/storage/dog")
+                    .request()
+                    .header(HttpHeaders.AUTHORIZATION, bac)
+                    .get(JsonNode.class);
         }).getLocalizedMessage());
     }
 
     @Test
-    public void testKeyIsFoundWithBranch() throws InterruptedException {
+    public void testKeyIsFoundWithBranch() throws InterruptedException, RefNotFoundException {
         Optional<StoreInfo> expected = DATA.get("horse");
+        final String bac = createCreds("anotheruser", SECRET);
+        io.jitstatic.auth.UserData anotherUser = Mockito.mock(io.jitstatic.auth.UserData.class);
+        when(storage.getUser("anotheruser", "refs/heads/branch", "keyuser")).thenReturn(anotherUser);
+        when(anotherUser.getRoles()).thenReturn(Set.of(new Role("read2"), new Role("write2")));
+        when(anotherUser.getBasicPassword()).thenReturn(SECRET);
         when(storage.getKey(Mockito.matches("horse"), Mockito.matches("refs/heads/branch"))).thenReturn(CompletableFuture.completedFuture(expected));
+
         JsonNode response = RESOURCES.target("/storage/horse")
-                .queryParam("ref", "refs/heads/branch").request().get(JsonNode.class);
+                .queryParam("ref", "refs/heads/branch")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, bac)
+                .get(JsonNode.class);
         assertEquals(returnedHorse, response.toString());
     }
 
     @Test
     public void testKeyIsNotFoundWithMalformedBranch() throws InterruptedException {
-        assertEquals(compileMsg(Status.NOT_FOUND), assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/horse")
-                .queryParam("ref", "refs/beads/branch").request().get(JsonNode.class)).getLocalizedMessage());
+        assertEquals(compileMsg(Status.BAD_REQUEST), assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/horse")
+                .queryParam("ref", "refs/beads/branch")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
+                .get(JsonNode.class)).getLocalizedMessage());
     }
 
     @Test
     public void testKeyIsNotFoundWithMalformedTag() throws InterruptedException {
-        assertEquals(compileMsg(Status.NOT_FOUND), assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/horse")
-                .queryParam("ref", "refs/bads/branch").request().get(JsonNode.class)).getLocalizedMessage());
+        assertEquals(compileMsg(Status.BAD_REQUEST), assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/horse")
+                .queryParam("ref", "refs/bads/branch")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
+                .get(JsonNode.class)).getLocalizedMessage());
     }
 
     @Test
-    public void testKeyIsFoundWithTags() throws InterruptedException {
-        Optional<StoreInfo> expected = DATA.get("horse");
-        when(storage.getKey(Mockito.matches("horse"), Mockito.matches("refs/tags/branch"))).thenReturn(CompletableFuture.completedFuture(expected));
-        JsonNode response = RESOURCES.target("/storage/horse")
-                .queryParam("ref", "refs/tags/branch").request().get(JsonNode.class);
-        assertEquals(returnedHorse, response.toString());
+    public void testKeyIsFoundWithTags() throws InterruptedException, RefNotFoundException {
+        Optional<StoreInfo> expected = DATA.get("dog");
+        when(storage.getKey(Mockito.matches("dog"), Mockito.matches("refs/tags/branch"))).thenReturn(CompletableFuture.completedFuture(expected));
+        JsonNode response = RESOURCES.target("/storage/dog")
+                .queryParam("ref", "refs/tags/branch")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
+                .get(JsonNode.class);
+        assertEquals(returnedDog, response.toString());
     }
 
     @Test
-    public void testDoubleKeyIsFoundWithTags() throws InterruptedException {
-        Optional<StoreInfo> expected = DATA.get("horse");
-        when(storage.getKey(Mockito.matches("horse/horse"), Mockito.matches("refs/tags/branch"))).thenReturn(CompletableFuture.completedFuture(expected));
-        JsonNode response = RESOURCES.target("/storage/horse/horse")
-                .queryParam("ref", "refs/tags/branch").request().get(JsonNode.class);
-        assertEquals(returnedHorse, response.toString());
+    public void testDoubleKeyIsFoundWithTags() throws InterruptedException, RefNotFoundException {
+        Optional<StoreInfo> expected = DATA.get("dog");
+        when(storage.getKey(Mockito.matches("dog/dog"), Mockito.matches("refs/tags/branch"))).thenReturn(CompletableFuture.completedFuture(expected));
+        JsonNode response = RESOURCES.target("/storage/dog/dog")
+                .queryParam("ref", "refs/tags/branch")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
+                .get(JsonNode.class);
+        assertEquals(returnedDog, response.toString());
     }
 
     @Test
-    public void testGetAKeyWithETag() {
-        Optional<StoreInfo> optional = DATA.get("horse");
-        when(storage.getKey(Mockito.matches("horse/horse"), Mockito.matches("refs/tags/branch"))).thenReturn(CompletableFuture.completedFuture(optional));
-        Response response = RESOURCES.target("/storage/horse/horse")
-                .queryParam("ref", "refs/tags/branch").request()
-                .header(HttpHeaders.IF_MATCH, "\"" + optional.get().getVersion() + "\"").get();
+    public void testGetAKeyWithETag() throws RefNotFoundException {
+        Optional<StoreInfo> optional = DATA.get("dog");
+        when(storage.getKey(Mockito.matches("dog/dog"), Mockito.matches("refs/tags/branch"))).thenReturn(CompletableFuture.completedFuture(optional));
+        Response response = RESOURCES.target("/storage/dog/dog")
+                .queryParam("ref", "refs/tags/branch")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
+                .header(HttpHeaders.IF_MATCH, "\"" + optional.get().getVersion() + "\"")
+                .get();
         assertEquals(HttpStatus.NOT_MODIFIED_304, response.getStatus());
         response.close();
     }
 
     @Test
     public void testFaultyRef() {
-        assertEquals(compileMsg(Status.NOT_FOUND), assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/horse")
-                .queryParam("ref", "refs/beads/branch").request().get(JsonNode.class)).getLocalizedMessage());
+        assertEquals(compileMsg(Status.BAD_REQUEST), assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/horse")
+                .queryParam("ref", "refs/beads/branch")
+                .request()
+                .get(JsonNode.class)).getLocalizedMessage());
     }
 
-    private String compileMsg(Status notFound) {
-        return String.format("HTTP %d %s", notFound.getStatusCode(), notFound.getReasonPhrase());
+    private String compileMsg(Status status) {
+        return String.format("HTTP %d %s", status.getStatusCode(), status.getReasonPhrase());
     }
 
     @Test
     public void testEmptyRef() {
-        assertEquals(compileMsg(Status.NOT_FOUND), assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/horse").queryParam("ref", "")
-                .request().get(JsonNode.class))
+        assertEquals(compileMsg(Status.BAD_REQUEST), assertThrows(WebApplicationException.class, () -> RESOURCES.target("/storage/horse")
+                .queryParam("ref", "")
+                .request()
+                .get(JsonNode.class))
                         .getLocalizedMessage());
     }
 
@@ -266,14 +292,16 @@ public class KeyResourceTest {
         ModifyKeyData data = new ModifyKeyData(toProvider(readTree), "message", "user", "mail");
         Response response = target.request()
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.UNAUTHORIZED.getStatusCode(), response.getStatus());
-        assertEquals("Basic realm=\"" + JITSTATIC_KEYADMIN_REALM + "\", charset=\"UTF-8\"", response.getHeaderString(HttpHeaders.WWW_AUTHENTICATE));
+        assertEquals("Basic realm=\"" + JitStaticConstants.JITSTATIC_KEYUSER_REALM + "|" + JITSTATIC_KEYADMIN_REALM + "|" + JitStaticConstants.GIT_REALM
+                + "\"", response.getHeaderString(HttpHeaders.WWW_AUTHENTICATE));
         response.close();
     }
 
     @Test
-    public void testPutADeletedKey() throws IOException {
+    public void testPutADeletedKey() throws IOException, RefNotFoundException {
         WebTarget target = RESOURCES.target("/storage/dog");
         when(storage.getKey(eq("dog"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
         byte[] readTree = "{\"food\" : [\"treats\",\"meat\"]}".getBytes(UTF_8);
@@ -282,8 +310,8 @@ public class KeyResourceTest {
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.IF_MATCH, "1")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
-
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.NOT_FOUND.getStatusCode(), response.getStatus());
         response.close();
     }
@@ -302,7 +330,8 @@ public class KeyResourceTest {
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.OK.getStatusCode(), response.getStatus());
         EntityTag entityTag = response.getEntityTag();
         assertEquals(expected.getLeft(), entityTag.getValue());
@@ -323,8 +352,8 @@ public class KeyResourceTest {
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"2\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
-
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.PRECONDITION_FAILED.getStatusCode(), response.getStatus());
         response.close();
     }
@@ -342,13 +371,14 @@ public class KeyResourceTest {
         Response response = target.request()
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.BAD_REQUEST.getStatusCode(), response.getStatus());
         response.close();
     }
 
     @Test
-    public void testPutAMissingKey() throws IOException {
+    public void testPutAMissingKey() throws IOException, RefNotFoundException {
         WebTarget target = RESOURCES.target("/storage/horse");
         when(storage.getKey(eq("horse"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
         byte[] readTree = "{\"food\" : [\"wheat\",\"carrots\"]}".getBytes(UTF_8);
@@ -357,13 +387,14 @@ public class KeyResourceTest {
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.NOT_FOUND.getStatusCode(), response.getStatus());
         response.close();
     }
 
     @Test
-    public void testPutAKeyWithNoUsers() throws IOException {
+    public void testPutAKeyWithNoUsers() throws IOException, RefNotFoundException {
         WebTarget target = RESOURCES.target("/storage/horse");
         Optional<StoreInfo> storeInfo = DATA.get("horse");
         when(storage.getKey(eq("horse"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(storeInfo));
@@ -371,15 +402,15 @@ public class KeyResourceTest {
         ModifyKeyData data = new ModifyKeyData(toProvider(readTree), "message", "user", "mail");
         Response response = target.request()
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
-                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
-        assertEquals(Status.BAD_REQUEST.getStatusCode(), response.getStatus());
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
+        assertEquals(Status.UNAUTHORIZED.getStatusCode(), response.getStatus());
         response.close();
     }
 
     @Test
-    public void testPutAKeyWithWrongUser() throws IOException {
+    public void testPutAKeyWithWrongUser() throws IOException, RefNotFoundException {
         WebTarget target = RESOURCES.target("/storage/cat");
         Optional<StoreInfo> storeInfo = DATA.get("cat");
         when(storage.getKey(eq("cat"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(storeInfo));
@@ -388,7 +419,8 @@ public class KeyResourceTest {
         Response response = target.request()
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.FORBIDDEN.getStatusCode(), response.getStatus());
         response.close();
     }
@@ -406,13 +438,14 @@ public class KeyResourceTest {
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.NOT_FOUND.getStatusCode(), response.getStatus());
         response.close();
     }
 
     @Test
-    public void testPutKeyButRefIsDeletedWhilst() throws IOException {
+    public void testPutKeyButRefIsDeletedWhilst() throws IOException, RefNotFoundException {
         WebTarget target = RESOURCES.target("/storage/dog");
         Optional<StoreInfo> storeInfo = DATA.get("dog");
         when(storage.getKey(eq("dog"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(storeInfo));
@@ -424,13 +457,14 @@ public class KeyResourceTest {
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
-        assertEquals(Status.NOT_FOUND.getStatusCode(), response.getStatus());
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
+        assertEquals(HttpStatus.BAD_REQUEST_400, response.getStatus());
         response.close();
     }
 
     @Test
-    public void testPutKeyButKeyIsDeletedWhilst() throws IOException {
+    public void testPutKeyButKeyIsDeletedWhilst() throws IOException, RefNotFoundException {
         WebTarget target = RESOURCES.target("/storage/dog");
         Optional<StoreInfo> storeInfo = DATA.get("dog");
         when(storage.getKey(eq("dog"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(storeInfo));
@@ -442,13 +476,14 @@ public class KeyResourceTest {
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.NOT_FOUND.getStatusCode(), response.getStatus());
         response.close();
     }
 
     @Test
-    public void testPutKeyButVersionIsChangedWhilst() throws IOException {
+    public void testPutKeyButVersionIsChangedWhilst() throws IOException, RefNotFoundException {
         WebTarget target = RESOURCES.target("/storage/dog");
         Optional<StoreInfo> storeInfo = DATA.get("dog");
         when(storage.getKey(eq("dog"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(storeInfo));
@@ -461,13 +496,14 @@ public class KeyResourceTest {
                 .header(HttpHeaders.ACCEPT, "application/json")
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.PRECONDITION_FAILED.getStatusCode(), response.getStatus());
         response.close();
     }
 
     @Test
-    public void testPutKeyGeneralError() throws IOException {
+    public void testPutKeyGeneralError() throws IOException, RefNotFoundException {
         WebTarget target = RESOURCES.target("/storage/dog");
         Optional<StoreInfo> storeInfo = DATA.get("dog");
         when(storage.getKey(eq("dog"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(storeInfo));
@@ -479,7 +515,8 @@ public class KeyResourceTest {
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.INTERNAL_SERVER_ERROR.getStatusCode(), response.getStatus());
     }
 
@@ -492,45 +529,51 @@ public class KeyResourceTest {
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.FORBIDDEN.getStatusCode(), response.getStatus());
         response.close();
     }
 
     @Test
-    public void testNotModified() {
+    public void testNotModified() throws RefNotFoundException {
         Optional<StoreInfo> expected = DATA.get("dog");
         when(storage.getKey("dog", REFS_HEADS_MASTER)).thenReturn(CompletableFuture.completedFuture(expected));
         Response response = RESOURCES.target("/storage/dog").request().header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED).get();
         assertEquals(returnedDog, response.readEntity(JsonNode.class).toString());
         assertEquals(DATA.get("dog").get().getVersion(), response.getEntityTag().getValue());
-        response = RESOURCES.target("/storage/dog").request()
+        response = RESOURCES.target("/storage/dog")
+                .request()
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
-                .header(HttpHeaders.IF_MATCH, "\"" + DATA.get("dog").get().getVersion() + "\"").get();
+                .header(HttpHeaders.IF_MATCH, "\"" + DATA.get("dog").get().getVersion() + "\"")
+                .get();
         assertEquals(Status.NOT_MODIFIED.getStatusCode(), response.getStatus());
     }
 
     @Test
-    public void testGetapplicatiOnoctetstream() {
+    public void testGetapplicatiOnoctetstream() throws RefNotFoundException {
         Optional<StoreInfo> expected = DATA.get("book");
         when(storage.getKey("book", REFS_HEADS_MASTER)).thenReturn(CompletableFuture.completedFuture(expected));
-        Response response = RESOURCES
-                .target("/storage/book")
+        Response response = RESOURCES.target("/storage/book")
                 .request()
-                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED).get();
+                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
+                .get();
         assertEquals(Status.OK.getStatusCode(), response.getStatus());
         assertArrayEquals(new byte[] { 1, 2, 3, 4, 5, 6, 7, 8 }, response.readEntity(byte[].class));
         response.close();
     }
 
     @Test
-    public void testModifyApplicatiOnoctetStream() {
+    public void testModifyApplicatiOnoctetStream() throws RefNotFoundException {
         Optional<StoreInfo> expected = DATA.get("book");
         when(storage.getKey(eq("book"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(expected));
         when(storage.putKey(eq("book"), eq(REFS_HEADS_MASTER), any(), eq("1"), any()))
                 .thenReturn(CompletableFuture.completedFuture(Either.left("2")));
-        Response response = RESOURCES.target("/storage/book").request().header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED).get();
+        Response response = RESOURCES.target("/storage/book")
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
+                .get();
         assertEquals(Status.OK.getStatusCode(), response.getStatus());
         assertArrayEquals(new byte[] { 1, 2, 3, 4, 5, 6, 7, 8 }, response.readEntity(byte[].class));
         EntityTag entityTag = response.getEntityTag();
@@ -543,19 +586,20 @@ public class KeyResourceTest {
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_OCTET_STREAM)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"" + entityTag.getValue() + "\"")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.OK.getStatusCode(), response.getStatus());
         response.close();
     }
 
     @Test
-    public void testAddKey() throws IOException {
-        StoreInfo si = new StoreInfo(toProvider(new byte[] { 1 }), new MetaData(new HashSet<>(), APPLICATION_JSON, false, false, List
-                .of(), null, null), "1", "1");
+    public void testAddKey() throws IOException, RefNotFoundException {
+        StoreInfo si = new StoreInfo(toProvider(new byte[] { 1 }), new MetaData(null, false, false, List.of(), Set.of(new Role("read")), Set
+                .of(new Role("write"))), "1", "1");
         when(storage.getKey(eq("test"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
         when(storage.addKey(eq("test"), any(), any(), any(), any())).thenReturn(CompletableFuture.completedFuture("1"));
-        AddKeyData addKeyData = new AddKeyData(toProvider(new byte[] { 1 }), new MetaData(new HashSet<>(), APPLICATION_JSON, false, false, List
-                .of(), null, null), "testmessage", "user", "test@test.com");
+        AddKeyData addKeyData = new AddKeyData(toProvider(new byte[] { 1 }), new MetaData(null, false, false, List.of(), Set.of(new Role("read")), Set
+                .of(new Role("write"))), "testmessage", "user", "test@test.com");
         Response response = RESOURCES.target("/storage/test")
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED_POST)
@@ -567,10 +611,10 @@ public class KeyResourceTest {
     }
 
     @Test
-    public void testAddRootKey() {
-        Mockito.when(storage.getKey(anyString(), anyString())).thenThrow(new WrappingAPIException(new UnsupportedOperationException("test/")));
-        AddKeyData addKeyData = new AddKeyData(toProvider(new byte[] { 1 }), new MetaData(new HashSet<>(), APPLICATION_JSON, false, false, List
-                .of(), null, null), "testmessage", "user", "test@test.com");
+    public void testAddRootKey() throws RefNotFoundException {
+        when(storage.getKey(anyString(), anyString())).thenThrow(new WrappingAPIException(new UnsupportedOperationException("test/")));
+        AddKeyData addKeyData = new AddKeyData(toProvider(new byte[] { 1 }), new MetaData(null, false, false, List.of(), Set.of(new Role("read")), Set
+                .of(new Role("write"))), "testmessage", "user", "test@test.com");
         Response response = RESOURCES.target("/storage/test/")
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED_POST)
@@ -582,23 +626,11 @@ public class KeyResourceTest {
     @Test
     public void testAddKeyNoUser() {
         Response response = RESOURCES.target("/storage/test").request()
-                .post(Entity.json(new AddKeyData(toProvider(new byte[] { 1 }), new MetaData(new HashSet<>(), APPLICATION_JSON, false, false, List
-                        .of(), null, null), "testmessage", "user", "test@test.com")));
+                .post(Entity.json(new AddKeyData(toProvider(new byte[] { 1 }), new MetaData(null, false, false, List.of(), Set.of(new Role("read")), Set
+                        .of(new Role("write"))), "testmessage", "user", "test@test.com")));
         assertEquals(Status.UNAUTHORIZED.getStatusCode(), response.getStatus());
-        assertEquals("Basic realm=\"" + JITSTATIC_KEYADMIN_REALM + "\", charset=\"UTF-8\"", response.getHeaderString(HttpHeaders.WWW_AUTHENTICATE));
-        response.close();
-    }
-
-    @Test
-    public void testAddKeyWrongUser() {
-        byte[] data = "{\"food\" : [\"treats\",\"steak\"]}".getBytes(UTF_8);
-        when(storage.addKey(any(), any(), any(), any(), any())).thenReturn(CompletableFuture.completedFuture("1"));
-        Response response = RESOURCES.target("/storage/test")
-                .request()
-                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
-                .post(Entity.json(new AddKeyData(toProvider(data), new MetaData(new HashSet<>(), APPLICATION_JSON, false, false, List
-                        .of(), null, null), "test", "user", "test@test.com")));
-        assertEquals(Status.FORBIDDEN.getStatusCode(), response.getStatus());
+        assertEquals("Basic realm=\"" + JitStaticConstants.JITSTATIC_KEYUSER_REALM + "|" + JITSTATIC_KEYADMIN_REALM + "|" + JitStaticConstants.GIT_REALM
+                + "\"", response.getHeaderString(HttpHeaders.WWW_AUTHENTICATE));
         response.close();
     }
 
@@ -609,14 +641,14 @@ public class KeyResourceTest {
                 .request()
                 .accept(MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED_POST)
-                .post(Entity.json(new AddKeyData(toProvider(new byte[] { 1 }), new MetaData(new HashSet<>(), APPLICATION_JSON, false, false, List
-                        .of(), null, null), "test", "user", "test@test.com")));
+                .post(Entity.json(new AddKeyData(toProvider(new byte[] { 1 }), new MetaData(null, false, false, List.of(), Set.of(new Role("read")), Set
+                        .of(new Role("write"))), "test", "user", "test@test.com")));
         assertEquals(403, response.getStatus());
         response.close();
     }
 
     @Test
-    public void testAddKeyKeyAlreadyExist() {
+    public void testAddKeyKeyAlreadyExist() throws RefNotFoundException {
         byte[] data = "{\"food\" : [\"treats\",\"steak\"]}".getBytes(UTF_8);
         when(storage.getKey(eq("test"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
         when(storage.addKey(any(), any(), any(), any(), any()))
@@ -624,14 +656,14 @@ public class KeyResourceTest {
         Response response = RESOURCES.target("/storage/test")
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED_POST)
-                .post(Entity.json(new AddKeyData(toProvider(data), new MetaData(new HashSet<>(), APPLICATION_JSON, false, false, List
-                        .of(), null, null), "test", "user", "test@test.com")));
+                .post(Entity.json(new AddKeyData(toProvider(data), new MetaData(null, false, false, List.of(), Set.of(new Role("read")), Set
+                        .of(new Role("write"))), "test", "user", "test@test.com")));
         assertEquals(Status.CONFLICT.getStatusCode(), response.getStatus());
         response.close();
     }
 
     @Test
-    public void testAddKeyBranchNotFound() {
+    public void testAddKeyBranchNotFound() throws RefNotFoundException {
         byte[] data = "{\"food\" : [\"treats\",\"steak\"]}".getBytes(UTF_8);
         when(storage.getKey(eq("test"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
         when(storage.addKey(any(), any(), any(), any(), any()))
@@ -639,14 +671,14 @@ public class KeyResourceTest {
         Response response = RESOURCES.target("/storage/test")
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED_POST)
-                .post(Entity.json(new AddKeyData(toProvider(data), new MetaData(new HashSet<>(), APPLICATION_JSON, false, false, List
-                        .of(), null, null), "test", "user", "test@test.com")));
-        assertEquals(Status.NOT_FOUND.getStatusCode(), response.getStatus());
+                .post(Entity.json(new AddKeyData(toProvider(data), new MetaData(null, false, false, List.of(), Set.of(new Role("read")), Set
+                        .of(new Role("write"))), "test", "user", "test@test.com")));
+        assertEquals(HttpStatus.BAD_REQUEST_400, response.getStatus());
         response.close();
     }
 
     @Test
-    public void testAddKeyDataIsMalformed() {
+    public void testAddKeyDataIsMalformed() throws RefNotFoundException {
         byte[] data = new byte[] { 1 };
         when(storage.getKey(eq("test"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
         when(storage.addKey(any(), any(), any(), any(), any()))
@@ -654,14 +686,14 @@ public class KeyResourceTest {
         Response response = RESOURCES.target("/storage/test")
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED_POST)
-                .post(Entity.json(new AddKeyData(toProvider(data), new MetaData(new HashSet<>(), APPLICATION_JSON, false, false, List
-                        .of(), null, null), "test", "user", "test@test.com")));
+                .post(Entity.json(new AddKeyData(toProvider(data), new MetaData(null, false, false, List.of(), Set.of(new Role("read")), Set
+                        .of(new Role("write"))), "test", "user", "test@test.com")));
         assertEquals(422, response.getStatus());
         response.close();
     }
 
     @Test
-    public void testAddKeyDataWithNodata() {
+    public void testAddKeyDataWithNodata() throws RefNotFoundException {
         when(storage.getKey(anyString(), anyString())).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
         when(storage.addKey(anyString(), any(), any(), any(), any()))
                 .thenReturn(CompletableFuture.completedFuture("1"));
@@ -669,13 +701,13 @@ public class KeyResourceTest {
                 .request()
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED_POST)
                 .accept(MediaType.APPLICATION_JSON)
-                .post(Entity.json(new AddKeyData(toProvider(new byte[] {}), new MetaData(new HashSet<>(), APPLICATION_JSON, false, false, List
-                        .of(), null, null), "test", "user", "test@test.com")));
+                .post(Entity.json(new AddKeyData(toProvider(new byte[] {}), new MetaData(null, false, false, List.of(), Set.of(new Role("read")), Set
+                        .of(new Role("write"))), "test", "user", "test@test.com")));
         assertEquals(200, response.getStatus());
     }
 
     @Test
-    public void testModifyKetWithoutIFMatchtag() {
+    public void testModifyKetWithoutIFMatchtag() throws RefNotFoundException {
         Optional<StoreInfo> storeInfo = DATA.get("dog");
         Either<String, FailedToLock> expected = Either.left("2");
         when(storage.getKey(eq("dog"), Mockito.isNull())).thenReturn(CompletableFuture.completedFuture(storeInfo));
@@ -687,26 +719,28 @@ public class KeyResourceTest {
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "")
-                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON)).invoke();
+                .buildPut(Entity.entity(data, MediaType.APPLICATION_JSON))
+                .invoke();
         assertEquals(Status.BAD_REQUEST.getStatusCode(), response.getStatus());
         response.close();
     }
 
     @Test
-    public void testGetMasterMetaKeyShouldFail() {
+    public void testGetMasterMetaKeyShouldFail() throws RefNotFoundException {
         when(storage.getListForRef(any(), anyString())).thenReturn(CompletableFuture.completedFuture(List.of()));
         Response response = RESOURCES.target("/storage/dog/")
-                .request().header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED).get();
+                .request()
+                .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
+                .get();
         assertEquals(Status.NOT_FOUND.getStatusCode(), response.getStatus());
         response.close();
     }
 
     @Test
     public void testPutOnMasterMetaKeyShouldFail() {
-        WebTarget target = RESOURCES.target("/storage/dog/");
         byte[] readTree = "{\"food\" : [\"treats\",\"steak\"]}".getBytes(UTF_8);
         ModifyKeyData data = new ModifyKeyData(toProvider(readTree), "message", "user", "mail");
-        Response response = target.request()
+        Response response = RESOURCES.target("/storage/dog/").request()
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .header(HttpHeaders.IF_MATCH, "\"1\"")
@@ -716,7 +750,7 @@ public class KeyResourceTest {
     }
 
     @Test
-    public void testDeleteKey() {
+    public void testDeleteKey() throws RefNotFoundException {
         Optional<StoreInfo> storeInfo = DATA.get("dog");
         when(storage.getKey(eq("dog"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(storeInfo));
         when(storage.delete(eq("dog"), eq(REFS_HEADS_MASTER), any())).thenReturn(CompletableFuture.completedFuture(Either.left("1")));
@@ -733,7 +767,7 @@ public class KeyResourceTest {
     }
 
     @Test
-    public void testDeleteKeyNoUserSet() {
+    public void testDeleteKeyNoUserSet() throws RefNotFoundException {
         Optional<StoreInfo> storeInfo = DATA.get("dog");
         when(storage.getKey(eq("dog"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(storeInfo));
         Response delete = RESOURCES.target("/storage/dog")
@@ -748,25 +782,27 @@ public class KeyResourceTest {
     }
 
     @Test
-    public void testDeleteKeyNoUserKey() {
+    public void testDeleteKeyNoUserKey() throws RefNotFoundException {
         Optional<StoreInfo> storeInfo = DATA.get("horse");
         when(storage.getKey(eq("horse"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(storeInfo));
-        Response delete = RESOURCES.target("/storage/horse").request()
+        Response delete = RESOURCES.target("/storage/horse")
+                .request()
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header("X-jitstatic-name", "user")
                 .header("X-jitstatic-mail", "mail")
                 .header("X-jitstatic-message", "msg")
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .delete();
-        assertEquals(Status.BAD_REQUEST.getStatusCode(), delete.getStatus());
+        assertEquals(Status.FORBIDDEN.getStatusCode(), delete.getStatus());
         delete.close();
     }
 
     @Test
-    public void testDeleteNoHeaderInfoSet() {
+    public void testDeleteNoHeaderInfoSet() throws RefNotFoundException {
         Optional<StoreInfo> storeInfo = DATA.get("dog");
         when(storage.getKey(eq("dog"), eq(REFS_HEADS_MASTER))).thenReturn(CompletableFuture.completedFuture(storeInfo));
-        Response delete = RESOURCES.target("/storage/dog").request()
+        Response delete = RESOURCES.target("/storage/dog")
+                .request()
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header("X-jitstatic-mail", "mail")
                 .header("X-jitstatic-message", "msg")
@@ -777,13 +813,14 @@ public class KeyResourceTest {
     }
 
     @Test
-    public void testListAll() {
+    public void testListAll() throws RefNotFoundException {
         StoreInfo dogInfo = DATA.get("dog").get();
         StoreInfo bookInfo = DATA.get("book").get();
         Pair<String, StoreInfo> dogPair = Pair.of("dog", dogInfo);
         Pair<String, StoreInfo> bookPair = Pair.of("book", bookInfo);
         when(storage.getListForRef(any(), any())).thenReturn(CompletableFuture.completedFuture(List.of(dogPair, bookPair)));
-        KeyDataWrapper list = RESOURCES.target("/storage/").request()
+        KeyDataWrapper list = RESOURCES.target("/storage/")
+                .request()
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .get(KeyDataWrapper.class);
@@ -794,50 +831,16 @@ public class KeyResourceTest {
     }
 
     @Test
-    public void testEmptyList() {
+    public void testEmptyList() throws RefNotFoundException {
         when(storage.getListForRef(any(), any())).thenReturn(CompletableFuture.completedFuture(List.of()));
-        assertEquals(Status.NOT_FOUND.getStatusCode(), RESOURCES.target("/storage/").request()
+        assertEquals(Status.NOT_FOUND.getStatusCode(), RESOURCES.target("/storage/")
+                .request()
                 .header(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON)
                 .header(HttpHeaders.AUTHORIZATION, BASIC_AUTH_CRED)
                 .get().getStatus());
-
     }
 
-    @Test
-    public void testisKeyUserAllowed() throws Exception {
-        when(storage.getUser(anyString(), anyString(), anyString())).thenReturn(new UserData(Set.of(new Role("role")), "p", null, null));
-        assertTrue(APIHelper.isKeyUserAllowed(storage, hashService, new User("u", "p"), REFS_HEADS_MASTER, Set.of(new Role("role"))));
-    }
-
-    @Test
-    public void testisKeyUserAllowedWithNoRole() throws Exception {
-        when(storage.getUser(anyString(), anyString(), anyString())).thenReturn(new UserData(Set.of(), "p", null, null));
-        assertFalse(APIHelper.isKeyUserAllowed(storage, hashService, new User("u", "p"), REFS_HEADS_MASTER, Set.of(new Role("role"))));
-    }
-
-    @Test
-    public void testisKeyUserAllowedWithWrongRole() throws Exception {
-        when(storage.getUser(anyString(), anyString(), anyString()))
-                .thenReturn(new UserData(Set.of(new Role("other")), "p", null, null));
-        assertFalse(APIHelper.isKeyUserAllowed(storage, hashService, new User("u", "p"), REFS_HEADS_MASTER, Set.of(new Role("role"))));
-    }
-
-    @Test
-    public void testisKeyUserAllowedWithWrongPassword() throws Exception {
-        when(storage.getUser(anyString(), anyString(), anyString()))
-                .thenReturn(new UserData(Set.of(new Role("role")), "z", null, null));
-        assertFalse(APIHelper.isKeyUserAllowed(storage, hashService, new User("u", "p"), REFS_HEADS_MASTER, Set.of(new Role("role"))));
-    }
-
-    @Test
-    public void testisKeyUserAllowedWithWrongPasswordNoBranch() throws Exception {
-        when(storage.getUser(anyString(), anyString(), anyString()))
-                .thenReturn(new UserData(Set.of(new Role("role")), "z", null, null));
-        assertFalse(APIHelper.isKeyUserAllowed(storage, hashService, new User("u", "p"), null, Set.of(new Role("role"))));
-    }
-
-    private static String createCreds(String user,
-            String secret) {
+    private static String createCreds(String user, String secret) {
         return "Basic " + Base64.getEncoder().encodeToString((user + ":" + secret).getBytes(UTF_8));
     }
 }
